--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,1 +1,14 @@
+backend:
+  name: github
+  repo: sharibarboza/FilcanJS #replace with your username/repo
 
+media_folder: static/assets
+
+collections:
+  - name: campmeeting_date
+    label: Campmeeting Date
+    folder: dates
+    create: true
+    fields:
+      - { label: Title, name: title, widget: string }
+      - { name: date, label: Date, widget: date }
