--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "gatsby": "^1.9.153",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-netlify-cms": "^1.0.0",
-    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
+    "gatsby-image": "^1.0.43",
+    "gatsby-remark-images": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-transformer-sharp": "^1.6.22",
     "netlify-cms": "^2.1.2",
     "react-bootstrap": "^0.32.4",
     "react-helmet": "^5.2.0"
