--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,12 +14,13 @@ collections:
       - { label: Title, name: title, widget: string }
       - { label: Date, name: date, widget: date }
 
-  - name: officer
-    label: Officer
+  - name: leadership
+    label: Leadership
     folder: leadership
     create: true
     fields:
       - { label: Title, name: title, widget: string }
       - { label: Name, name: name, widget: string }
-      - { label: Church, name: church, widget: string }
-      - { label: Photo, name: photo, widget: image }
+      - { label: Church, name: church, widget: string, required: false }
+      - { label: Photo, name: photo, widget: image, required: false }
+      - { label: Officer, name: officer, widget: boolean }
