--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.153",
+    "gatsby-image": "^1.0.43",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-netlify-cms": "^1.0.0",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-remark": "^1.7.28",
-    "gatsby-image": "^1.0.43",
-    "gatsby-remark-images": "^2.0.1",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-remark-images": "^2.0.1",
+    "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-remark": "^1.7.28",
     "gatsby-transformer-sharp": "^1.6.22",
     "netlify-cms": "^2.1.2",
+    "netlify-identity-widget": "^1.4.14",
     "react-bootstrap": "^0.32.4",
     "react-helmet": "^5.2.0"
   },
