--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,8 +33,19 @@ collections:
     fields:
       - { label: Name of church, name: title }
       - { label: City/Town, name: city, widget: string }
-      - { label: Current Pastor, name: pastor, widget: string }
+      - { label: Current Pastor, name: pastor, widget: string, required: false }
       - { label: Address, name: address, widget: string }
       - { label: Phone, name: phone, widget: string, required: false }
       - { label: Website, name: website, widget: string, required: false }
       - { label: Photo, name: photo, widget: image, required: false, default: /assets/sda-logo-blue.png }
+
+  - name: pages
+    label: Pages
+    files:
+      label: History Page
+      name: history
+      file: content/history.yaml
+      fields:
+        - { label: Title of Page, name: title, widget: string }
+        - { label: Text Content, name: content, widget: markdown }
+        - { label: Photo, name: photo, widget: image }
