--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "gatsby-plugin-netlify-cms": "^1.0.0",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
+    "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-remark-responsive-iframe": "^2.0.5",
+    "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
     "gatsby-transformer-sharp": "^1.6.22",
     "netlify-cms": "^2.1.2",
     "netlify-identity-widget": "^1.4.14",
+    "prismjs": "^1.15.0",
     "react-bootstrap": "^0.32.4",
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
