--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   repo: sharibarboza/FilcanJS #replace with your username/repo
   branch: dev
 
-media_folder: static/assets
-public_folder: /assets
+media_folder: ../assets
+public_folder: ../assets
 
 collections:
   - name: campmeeting_date
@@ -23,7 +23,7 @@ collections:
       - { label: Unique title to file this executive (e.g. VP-Edmonton), name: title, widget: string }
       - { label: Executive Position, name: position, widget: string }
       - { label: Name, name: name, widget: string }
-      - { label: Photo, name: photo, widget: image, required: false }
+      - { label: Photo, name: photo, widget: image, required: false, default: ../static/assets/default.jpg }
       - { label: Executive Type, name: type, widget: select, options: ['Officer', 'Board VP', 'Adviser', 'Chair', 'Youth'] }
 
   - name: church
@@ -37,7 +37,7 @@ collections:
       - { label: Address, name: address, widget: string }
       - { label: Phone, name: phone, widget: string, required: false }
       - { label: Website, name: website, widget: string, required: false }
-      - { label: Photo, name: photo, widget: image, required: false, default: /assets/sda-logo-blue.png }
+      - { label: Photo, name: photo, widget: image, required: false, default: ../static/assets/sda-logo-blue.png }
 
   - name: pages
     label: Pages
