--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.0.8",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-netlify-cms": "^1.0.0",
+    "gatsby-plugin-netlify-cms-paths": "^1.0.2",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-remark-copy-linked-files": "^2.0.5",
