--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   repo: sharibarboza/FilcanJS #replace with your username/repo
   branch: dev
 
-media_folder: ../assets
-public_folder: ../assets
+media_folder: static/assets
+public_folder: /assets
 
 collections:
   - name: campmeeting_date
