--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
+    "react-images": "^0.5.19",
     "react-scrollchor": "^6.0.0"
   },
   "keywords": [
