--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sharidan Barboza",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "create-react-class": "^15.6.3",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.153",
     "gatsby-image": "^2.0.8",
@@ -23,13 +24,15 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "netlify-cms": "^2.1.2",
     "netlify-identity-widget": "^1.4.14",
+    "nuka-carousel": "^4.4.0",
     "prismjs": "^1.15.0",
     "react-bootstrap": "^0.32.4",
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19",
-    "react-scrollchor": "^6.0.0"
+    "react-scrollchor": "^6.0.0",
+    "wowjs": "^1.1.3"
   },
   "keywords": [
     "gatsby"
