--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - { label: Unique title to file this executive (e.g. VP-Edmonton), name: title, widget: string }
       - { label: Executive Position, name: position, widget: string }
       - { label: Name, name: name, widget: string }
-      - { label: Photo, name: photo, widget: image, required: false, default: assets/default.jpg }
+      - { label: Photo, name: photo, widget: image, required: false, default: /assets/default.jpg }
       - { label: Executive Type, name: type, widget: select, options: ['Officer', 'Board VP', 'Adviser', 'Chair', 'Youth'] }
 
   - name: church
@@ -92,4 +92,30 @@ collections:
       - { label: Name of speaker, name: title, widget: string }
       - { label: Type of speaker (e.g. Youth Speaker), name: type, widget: string }
       - { label: City, name: city, widget: string }
-      - { label: Photo, name: photo, widget: image, required: false, default: assets/default.jpg }
+      - { label: Photo, name: photo, widget: image, required: false, default: /assets/default.jpg }
+
+  - name: faq
+    label: Camp Meeting FAQ
+    folder: cms/faq
+    create: true
+    fields:
+      - { label: Question, name: title, widget: string }
+      - { label: Answer, name: answer, widget: string }
+
+  - name: contact
+    label: Contact Information
+    folder: cms/contact
+    create: true
+    fields:
+      - { label: Email, name: title, widget: string }
+      - { label: Phone Number, name: phone, widget: string }
+
+  - name: meetings
+    label: Organizational Meetings
+    folder: cms/meetings
+    create: true
+    fields:
+      - { label: Title of meeting, name: title, widget: string }
+      - { label: Date and time, name: datetime, widget: datetime }
+      - { label: Address, name: Address, widget: string }
+      - { label: Description (additional information), name: description, widget: string }
