Change FAQ answers to the text widget

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -100,7 +100,7 @@ collections:
     create: true
     fields:
       - { label: Question, name: title, widget: string }
-      - { label: Answer, name: answer, widget: string }
+      - { label: Answer, name: answer, widget: text }
 
   - name: contact
     label: Contact Information
