--- a/package.json
+++ b/package.json
@@ -22,18 +22,16 @@
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
     "gatsby-transformer-sharp": "^1.6.22",
-    "jquery": "^3.3.1",
     "netlify-cms": "^2.1.2",
     "netlify-identity-widget": "^1.4.14",
     "nuka-carousel": "^4.4.0",
-    "popper.js": "^1.14.4",
     "prismjs": "^1.15.0",
-    "react-bootstrap": "^0.32.4",
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19",
     "react-scrollchor": "^6.0.0",
+    "reactstrap": "^6.4.0",
     "wowjs": "^1.1.3"
   },
   "keywords": [
