--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,10 +33,10 @@ collections:
     fields:
       - { label: Name of church, name: title }
       - { label: City/Town, name: city, widget: string }
-      - { label: Current Pastor, name: pastor, widget: string, required: false }
+      - { label: Current Pastor, name: pastor, widget: string, required: false, default: '' }
       - { label: Address, name: address, widget: string }
-      - { label: Phone, name: phone, widget: string, required: false }
-      - { label: Website, name: website, widget: string, required: false }
+      - { label: Phone, name: phone, widget: string, required: false, default: '' }
+      - { label: Website, name: website, widget: string, required: false, default: '' }
       - { label: Photo, name: photo, widget: image, required: false, default: /assets/sda-logo-blue.png }
 
   - name: pages
@@ -115,7 +115,7 @@ collections:
     folder: cms/meetings
     create: true
     fields:
-      - { label: Title of meeting, name: title, widget: string }
+      - { label: Title of meeting (must be unique), name: title, widget: string }
       - { label: Date and time, name: datetime, widget: datetime }
-      - { label: Address, name: Address, widget: string }
-      - { label: Description (additional information), name: description, widget: string }
+      - { label: Address, name: address, widget: string }
+      - { label: Description (additional information), name: description, widget: string, required: false, default: '' }
