--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19",
+    "react-scroll-up-button": "^1.6.4",
     "react-scrollchor": "^6.0.0",
     "reactstrap": "^6.4.0",
     "wowjs": "^1.1.3"
