--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -119,3 +119,12 @@ collections:
       - { label: Date and time, name: datetime, widget: datetime }
       - { label: Address, name: address, widget: string }
       - { label: Description (additional information), name: description, widget: string, required: false, default: '' }
+
+  - name: resources
+    label: Resource Files
+    folder: cms/files/resources
+    create: true
+    fields:
+      - { label: Title of File, name: title, widget: string }
+      - { label: Category, name: type, widget: select, options: ['General', 'Sports Tournaments/Parlor Games', 'Social & Cultural Activities', 'Worship Services'] }
+      - { label: File, name: file, widget: file }
