Change text widget content name to body

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -48,7 +48,7 @@ collections:
         fields:
           - { label: Title of Page, name: title, widget: string }
           - { label: Photo, name: photo, widget: image }
-          - { label: Text Content, name: content, widget: markdown }
+          - { label: Text Content, name: body, widget: markdown }
 
   - name: bylaws
     label: Bylaws
@@ -57,7 +57,7 @@ collections:
     fields:
       - { label: Title of Bylaw File, name: title, widget: string }
       - { label: File, name: file, widget: file }
-      - { label: Text Content, name: content, widget: markdown }
+      - { label: Text Content, name: body, widget: markdown }
 
   - name: reports
     label: Annual Reports
