--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "react-scroll-up-button": "^1.6.4",
     "react-scrollchor": "^6.0.0",
     "reactstrap": "^6.4.0",
+    "remark": "^10.0.1",
+    "remark-html": "^9.0.0",
+    "remark-preset-lint-recommended": "^3.0.2",
     "wowjs": "^1.1.3"
   },
   "keywords": [
