Add meetings location name

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -117,10 +117,10 @@ collections:
     folder: cms/meetings
     create: true
     fields:
-      - { label: Title of meeting (must be unique), name: title, widget: string }
-      - { label: Date and time, name: datetime, widget: datetime }
+      - { label: Date and time, name: title, widget: datetime }
+      - { label: Location name (e.g. Foothills Camp), name: location, widget: string }
       - { label: Address, name: address, widget: string }
-      - { label: Description (additional information), name: description, widget: string, required: false, default: '' }
+      - { label: Description (optional additional information), name: description, widget: string, required: false, default: '' }
 
   - name: resources
     label: Resource Files
