--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,7 @@ collections:
     fields:
       - { label: Title of Report, name: title, widget: string }
       - { label: File, name: file, widget: file }
-      - { label: Current date (do not change), name: date,  widget: date, required: false }
+      - { label: Current date (do not change), name: date,  widget: date, required: false, default="" }
 
   - name: grid
     label: Grid Images
