Update executive components

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - { label: Unique title to file this executive (e.g. VP-Edmonton), name: title, widget: string }
       - { label: Executive Position, name: position, widget: string }
       - { label: Name, name: name, widget: string }
-      - { label: Photo, name: photo, widget: image, required: false, default: /assets/default.jpg }
+      - { label: Photo, name: photo, widget: image, default: /assets/default.jpg }
       - { label: Executive Type, name: type, widget: select, options: ['Officer', 'Board VP', 'Adviser', 'Chair', 'Youth'] }
 
   - name: church
