--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,8 +21,8 @@ collections:
     create: true
     fields:
       - { label: Unique title to file this executive (e.g. VP-Edmonton), name: title, widget: string }
-      - { label: Executive Position, name: position, widget: string, [".{0,24}", "Cannot exceed more than 24 characters."] }
-      - { label: Name, name: name, widget: string, pattern: [".{0,24}", "Cannot exceed more than 24 characters."] }
+      - { label: Executive Position, name: position, widget: string }
+      - { label: Name, name: name, widget: string }
       - { label: Photo, name: photo, widget: image, default: /assets/default.jpg }
       - { label: Executive Type, name: type, widget: select, options: ['Officer', 'Board VP', 'Adviser', 'Chair', 'Youth'] }
 
@@ -91,9 +91,9 @@ collections:
     folder: cms/speakers
     create: true
     fields:
-      - { label: Name of speaker, name: title, widget: string, [".{0,24}", "Cannot exceed more than 24 characters."] }
+      - { label: Name of speaker, name: title, widget: string }
       - { label: Type of speaker (e.g. Youth Speaker), name: type, widget: string }
-      - { label: City, name: city, widget: string, [".{0,24}", "Cannot exceed more than 24 characters."] }
+      - { label: City, name: city, widget: string }
       - { label: Photo, name: photo, widget: image, required: false, default: /assets/default.jpg }
 
   - name: faq
