--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,7 +37,7 @@ collections:
       - { label: Address, name: address, widget: string }
       - { label: Phone, name: phone, widget: string, required: false, default: '' }
       - { label: Website, name: website, widget: string, required: false, default: '' }
-      - { label: Photo, name: photo, widget: image, required: false, default: /assets/sda-logo-blue.png }
+      - { label: Photo, name: photo, widget: image, required: false, default: /assets/adventist_logo.png }
 
   - name: pages
     label: Pages
