--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -95,6 +95,7 @@ collections:
       - { label: Name of speaker, name: title, widget: string }
       - { label: Type of speaker (e.g. Youth Speaker), name: type, widget: string }
       - { label: City, name: city, widget: string }
+      - { label: Email, name: email, widget: string }
       - { label: Photo, name: photo, widget: image, required: false, default: /assets/default.jpg }
 
   - name: faq
