--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,7 +24,7 @@ collections:
       - { label: Executive Type, name: type, widget: select, options: ['Officer', 'Board VP', 'Adviser', 'Chair', 'Youth'] }
       - { label: Executive Position, name: position, widget: string }
       - { label: Name, name: name, widget: string }
-      - { label: Email, name: email, widget: string }
+      - { label: Email, name: email, widget: string, required: false, default: '' }
       - { label: Photo, name: photo, widget: image, default: /assets/default.jpg }
 
   - name: church
