--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-netlify-cms-paths": "^1.0.2",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-plugin-sitemap": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-remark-prismjs": "^3.0.0",
@@ -29,6 +30,7 @@
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
+    "react-hot-loader": "3.0.0",
     "react-images": "^0.5.19",
     "react-router-hash-link": "^1.2.1",
     "react-scroll-up-button": "^1.6.4",
