--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     create: true
     fields:
       - { label: Unique title to file this date (e.g. Camp Meeting 2019), name: title, widget: string }
-      - { label: Date, name: date, widget: date }
+      - { label: Date, name: date, widget: datetime }
 
   - name: leadership
     label: Leadership
