--- a/package.json
+++ b/package.json
@@ -4,43 +4,44 @@
   "version": "1.0.0",
   "author": "Sharidan Barboza",
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "create-react-class": "^15.6.3",
-    "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.153",
-    "gatsby-image": "^2.0.8",
-    "gatsby-link": "^1.6.34",
-    "gatsby-plugin-netlify-cms": "^1.0.0",
-    "gatsby-plugin-netlify-cms-paths": "^1.0.2",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sharp": "^1.6.41",
+    "bootstrap": "~4.1.3",
+    "create-react-class": "~15.6.3",
+    "font-awesome": "~4.7.0",
+    "gatsby": "~1.9.153",
+    "gatsby-image": "^1.0.43",
+    "gatsby-link": "~1.6.34",
+    "gatsby-plugin-netlify-cms": "~1.0.0",
+    "gatsby-plugin-netlify-cms-paths": "~1.0.2",
+    "gatsby-plugin-react-helmet": "~1.0.8",
+    "gatsby-plugin-sharp": "~1.6.41",
     "gatsby-plugin-sitemap": "1.2.25",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
-    "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-remark": "^1.7.28",
-    "gatsby-transformer-sharp": "^1.6.22",
-    "netlify-cms": "^2.1.2",
-    "netlify-identity-widget": "^1.4.14",
-    "nuka-carousel": "^4.4.0",
-    "prismjs": "^1.15.0",
-    "react-geocode": "^0.1.2",
-    "react-google-maps": "^9.4.5",
-    "react-helmet": "^5.2.0",
+    "gatsby-remark-copy-linked-files": "~2.0.5",
+    "gatsby-remark-images": "~2.0.1",
+    "gatsby-remark-prismjs": "~3.0.0",
+    "gatsby-remark-responsive-iframe": "~2.0.5",
+    "gatsby-remark-smartypants": "~2.0.5",
+    "gatsby-source-filesystem": "~1.5.11",
+    "gatsby-transformer-remark": "~1.7.28",
+    "gatsby-transformer-sharp": "~1.6.22",
+    "netlify-cms": "~2.1.2",
+    "netlify-identity-widget": "~1.4.14",
+    "nuka-carousel": "~4.4.0",
+    "prismjs": "~1.15.0",
+    "react": "15.6.0",
+    "react-geocode": "~0.1.2",
+    "react-google-maps": "~9.4.5",
+    "react-helmet": "~5.2.0",
     "react-hot-loader": "3.0.0",
-    "react-images": "^0.5.19",
-    "react-router-hash-link": "^1.2.1",
-    "react-scroll-up-button": "^1.6.4",
-    "react-scrollchor": "^6.0.0",
-    "reactstrap": "^6.4.0",
-    "recompose": "^0.30.0",
-    "remark": "^10.0.1",
-    "remark-html": "^9.0.0",
-    "remark-preset-lint-recommended": "^3.0.2",
-    "wowjs": "^1.1.3"
+    "react-images": "~0.5.19",
+    "react-router-hash-link": "~1.2.1",
+    "react-scroll-up-button": "~1.6.4",
+    "react-scrollchor": "~6.0.0",
+    "reactstrap": "~6.4.0",
+    "recompose": "~0.30.0",
+    "remark": "~10.0.1",
+    "remark-html": "~9.0.0",
+    "remark-preset-lint-recommended": "~3.0.2",
+    "wowjs": "~1.1.3"
   },
   "keywords": [
     "gatsby"
@@ -53,7 +54,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.13.7"
+    "prettier": "~1.13.7"
   },
   "repository": {
     "type": "git",
