--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-hash-link": "~1.2.1",
     "react-scroll-up-button": "~1.6.4",
     "react-scrollchor": "~6.0.0",
+    "react-youtube": "^7.13.1",
     "reactstrap": "~6.4.0",
     "recompose": "~0.30.0",
     "remark": "~10.0.1",
