Fix position field for schedules

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -160,10 +160,9 @@ collections:
     label: Schedule Images
     folder: cms/files/schedules
     create: true
-    sortableFields: ['date', 'title']
     fields:
       - { label: Title of Schedule, name: title, widget: string, pattern: ['^.{1,40}$', "Title must not exceed 40 characters."], required: true }
-      - { label: Number Position of Photo, name: position, widget: number, min: 1, step: 1, value_type: "int" }
+      - { label: Number Position of Photo, name: position, widget: number, min: 1, step: 1, value_type: int }
       - { label: Photo, name: photo, widget: image }
 
 
