Update to latest version for moment.js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "~1.5.11",
     "gatsby-transformer-remark": "~1.7.28",
     "gatsby-transformer-sharp": "~1.6.22",
+    "moment": "^2.29.2",
     "netlify-cms": "~2.1.2",
     "netlify-identity-widget": "~1.4.14",
     "nuka-carousel": "~4.4.0",
